--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -1,4 +1,9 @@
 .wrapper {
+    --search-border-radius: 92px;
+    --search-height: 46px;
+    --search-top-spacer: 9px;
+    --search-button-width: 52px;
+
     width: 100%;
     height: var(--default-layout-header-height);
     box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
@@ -6,7 +11,81 @@
     justify-content: center;
 
     .inner {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
         height: 100%;
         width: var(--default-layout-width);
+
+        .logo {
+            display: flex;
+        }
+
+        .search {
+            display: flex;
+            position: relative;
+            width: 361px;
+            height: var(--search-height);
+            padding-left: 16px;
+            background-color: rgba(22, 24, 35, 0.06);
+            border: 1.5px solid transparent;
+            border-radius: var(--search-border-radius);
+
+            input {
+                height: 100%;
+                font-size: 1.6rem;
+                color: var(--black);
+                background-color: transparent;
+                flex: 1; // tran ra
+                caret-color: var(--primary); // con tro chuot
+            }
+
+            input:not(:placeholder-shown) ~ .search-btn {
+                // ~ select element cung level
+                color: rgba(22, 24, 35, 0.75);
+            }
+
+            .clear,
+            .loading {
+                position: absolute;
+                right: calc(var(--search-button-width) + 1.6rem);
+                top: 50%;
+                transform: translateY(-50%);
+                color: rgba(22, 24, 35, 0.34);
+            }
+
+            .search-btn {
+                width: var(--search-button-width);
+                height: 100%;
+                border-top-right-radius: var(--search-border-radius);
+                border-bottom-right-radius: var(--search-border-radius);
+                font-size: 1.8rem;
+                color: rgba(22, 24, 35, 0.34);
+
+                &:hover {
+                    background-color: rgba(22, 24, 35, 0.03);
+                    cursor: pointer;
+                }
+
+                &:active {
+                    background-color: rgba(22, 24, 35, 0.06);
+                }
+            }
+
+            &::after {
+                content: '';
+                position: absolute;
+                top: var(--search-top-spacer);
+                right: var(--search-button-width);
+                height: calc(var(--search-height) - var(--search-top-spacer) * 2);
+                width: 1px;
+                background-color: rgba(22, 24, 35, 0.12);
+            }
+
+            &:focus-within {
+                // the ben trong dc focus
+                border-color: rgba(22, 24, 35, 0.2);
+            }
+        }
     }
 }
