--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -21,10 +21,22 @@
             display: flex;
         }
 
+        .search,
+        .search-result {
+            width: 361px;
+        }
+
+        .search-title {
+            padding: 5px 12px;
+            font-size: 1.4rem;
+            font-weight: 600;
+            line-height: 1.4rem;
+            color: rgba(22, 24, 35, 0.75);
+        }
+
         .search {
             display: flex;
             position: relative;
-            width: 361px;
             height: var(--search-height);
             padding-left: 16px;
             background-color: rgba(22, 24, 35, 0.06);
