--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -26,6 +26,12 @@
     margin-left: 8px;
 }
 
+.icon {
+    display: inline-block;
+    width: 24px;
+    text-align: center;
+}
+
 // type
 .rounded {
     border-radius: 999px;
@@ -61,6 +67,8 @@
 }
 
 .text {
+    color: var(--black) !important;
+
     &:hover {
         text-decoration: underline;
         background-color: rgba(22, 24, 35, 0.03);
