--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -14,6 +14,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        padding: 0 var(--default-layout-horizontal-spacer);
         height: 100%;
         width: var(--default-layout-width);
 
