--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -14,3 +14,35 @@
 .menu-popper {
     padding-bottom: 8px;
 }
+
+// Header
+.header {
+    position: relative;
+    height: 50px;
+    margin-top: -8px;
+
+    .back-btn {
+        display: flex;
+        align-items: center;
+        width: 100%;
+        height: 50px;
+        background-color: transparent;
+        cursor: pointer;
+    }
+
+    .icon {
+        position: absolute;
+        top: 50%;
+        left: 20%;
+        transform: translate(-50%, -50%);
+        font-size: 1.8rem;
+    }
+
+    .header-title {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 1.6rem;
+    }
+}
