--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -27,7 +27,10 @@
 }
 
 .icon {
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
     width: 24px;
     text-align: center;
 }
