--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -5,7 +5,7 @@
     --primary: #fe2c55;
     --black: #000;
     --white: #fff;
-    --text-color: #333;
+    --text-color: rgb(22, 24, 35);
 
     //Default layout
     --default-layout-header-height: 60px;
@@ -26,6 +26,7 @@ html {
 body {
     font-family: ibm-plex-sans, sans-serif;
     font-size: 1.6rem;
+    color: var(--text-color);
     line-height: 1.5;
     letter-spacing: 0.1rem;
     text-rendering: optimizeSpeed;
@@ -43,4 +44,27 @@ input,
 a[href] {
     color: var(--text-color);
     text-decoration: none;
+}
+
+// Custom tippy tooltip
+body {
+    .tippy-box {
+        border-radius: 8px;
+        font-weight: 600;
+        font-size: 1.6rem;
+        line-height: 22px;
+        background-color: rgba(84, 84, 84, 0.92);
+
+        &[data-placement^='bottom'] > .tippy-arrow:before {
+            top: -8px;
+        }
+    }
+
+    .tippy-arrow {
+        color: rgba(84, 84, 84, 0.92);
+    }
+
+    .tippy-content {
+        padding: 8px 9px;
+    }
 }
