--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -8,6 +8,10 @@
         font-weight: 500;
         justify-content: flex-start;
         border-radius: 0;
+
+        &.separate {
+            border-top: 1px solid rgba(22, 24, 35, 0.12);
+        }
     }
 }
 
