Xây dựng UI phần Header #7

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -10,6 +10,7 @@
     cursor: pointer;
     border: 1px solid transparent;
     user-select: none;
+    font-family: ProximaNova-Bold, sans-serif;
 
     + .wrapper {
         margin-left: 8px;
