--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -123,6 +123,7 @@
     background-color: transparent;
     font-size: 2.8rem;
     padding: 4px;
+    cursor: pointer;
 
     + .action-btn {
         margin-left: 8px;
