--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -1,5 +1,5 @@
 @import 'normalize.css';
-@import url('https://use.typekit.net/waz4tsx.css');
+// @import url('https://use.typekit.net/waz4tsx.css');
 
 :root {
     --primary: #fe2c55;
@@ -24,11 +24,10 @@ html {
 }
 
 body {
-    font-family: ibm-plex-sans, sans-serif;
+    font-family: ProximaNova-Regular, sans-serif;
     font-size: 1.6rem;
     color: var(--text-color);
     line-height: 1.5;
-    letter-spacing: 0.1rem;
     text-rendering: optimizeSpeed;
 }
 
@@ -39,11 +38,33 @@ input,
     border: none;
     outline: none;
     background-color: var(--white);
+    font-family: ProximaNova-Regular, sans-serif;
 }
 
 a[href] {
     color: var(--text-color);
     text-decoration: none;
+}
+
+// Fonts embeded
+@font-face {
+    font-family: ProximaNova-Bold;
+    src: url(/assets/fonts/Proxima-Nova-Bold.woff);
+}
+
+@font-face {
+    font-family: ProximaNova-Regular;
+    src: url(/assets/fonts/Proxima-Nova-Regular.woff2);
+}
+
+@font-face {
+    font-family: ProximaNova-Semibold;
+    src: url(/assets/fonts/ProximaNova-Semibold.woff2);
+}
+
+@font-face {
+    font-family: SofiaPro;
+    src: url(/assets/fonts/sofiapro-bold.woff);
 }
 
 // Custom tippy tooltip
