--- a/src/components/AccountItem/AccountItem.module.scss
+++ b/src/components/AccountItem/AccountItem.module.scss
@@ -1,7 +1,7 @@
 .wrapper {
     display: flex;
     align-items: center;
-    padding: 6px 16px;
+    padding: 8px 16px;
     cursor: pointer;
 
     &:hover {
@@ -24,6 +24,7 @@
     .name {
         font-size: 1.6rem;
         font-weight: 500;
+        font-family: ProximaNova-Semibold, sans-serif;
     }
 
     .check {
