--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -8,6 +8,7 @@
         font-weight: 500;
         justify-content: flex-start;
         border-radius: 0;
+        font-family: ProximaNova-Regular, sans-serif;
 
         &.separate {
             border-top: 1px solid rgba(22, 24, 35, 0.12);
