--- a/src/components/Layout/components/Search/Search.module.scss
+++ b/src/components/Layout/components/Search/Search.module.scss
@@ -46,6 +46,19 @@
         cursor: pointer;
     }
 
+    .loading {
+        animation: spinner 0.5s linear infinite;
+    }
+
+    @keyframes spinner {
+        from {
+            transform: translateY(-50%) rotate(0deg);
+        }
+        to {
+            transform: translateY(-50%) rotate(360deg);
+        }
+    }
+
     .search-btn {
         width: var(--search-button-width);
         height: 100%;
